--- a/static/repVenta.CSS
+++ b/static/repVenta.CSS
@@ -241,6 +241,10 @@ body.dark-mode .toggle-dark-mode {
     margin-bottom: 0px;
 }
 
+.fecha{
+    margin-left: 100px;
+}
+
 /* Amarillo Pastel: #FFFFCC
 Amarillo Normal: #FFD700
 Mostaza: #D4AF37
