--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -236,9 +236,9 @@
     </form>
     <!-- Enlace para cancelar la venta -->
     <a href="{{ url_for('registrar_venta') }}" class="btn">Cancelar Venta</a>
-    <form action="{{ url_for('generar_ticket') }}" method="POST" class="realizar-venta">
+    <!-- <form action="{{ url_for('generar_ticket') }}" method="POST" class="realizar-venta">
                     <button type="submit" class="btn btn-primary">Generar Ticket</button>
-    </form>
+    </form> -->
 </div>
         </div>
         </section>
