--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,331 +1,164 @@
-html{
-    overflow-x: hidden;
+/* Navbar Styles */
+.navbar {
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 10px;
 }
 
-/* Fondo negro para la barra de navegación */
-.navbar { /* Elemento navbar */
-    background-color: #000000 !important; /* Forzar el fondo negro */
-    width: 610px;
-    height: 20px;
-    justify-content: flex-end; /* Mueve la barra de navegación a la derecha */
-    margin-left: 750px;
-    position: relative;
+.navbar .navbar-nav .nav-link {
+    color: #333;
+    padding: 10px 20px;
 }
 
-/* Texto amarillo para los enlaces de navegación */
-.navbar-nav .nav-item .nav-link { /* Enlaces dentro del navbar */
-    color: #FFEA99 !important; /* Texto amarillo */
+.navbar .navbar-nav .nav-item.dropdown .dropdown-menu {
+    background-color: #fff;
+    border: 1px solid #ddd;
 }
 
-/* Hover: texto amarillo y fondo negro */
-.navbar-nav .nav-item .nav-link:hover {
-    color: #FFEA99 !important; /* Texto amarillo en hover */
-    background-color: #000 !important; /* Fondo negro en hover */
-}
-
-/* Texto amarillo para la marca y otros textos dentro de la navbar */
-.navbar-brand, .navbar-toggler-icon, .navbar .h5, .logo-gladiators h5 { /* Texto dentro del navbar */
-    color: #FFEA99 !important; /* Texto amarillo */
-}
-
-/* Dropdown Menu */
-.dropdown-menu { /* Menú desplegable dentro del navbar */
-    background-color: #0b0b0b !important; /* Fondo negro */
+.navbar-toggler {
     border: none;
+    background-color: transparent;
 }
 
-/* Texto amarillo en los elementos del dropdown */
-.dropdown-item { /* Elementos del menú desplegable */
-    color: #FFEA99 !important; /* Texto amarillo */
+.navbar-toggler-icon {
+    background-image: url('https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/img/navbar-toggler-icon.svg');
 }
 
-/* Hover en el dropdown */
-.dropdown-item:hover {
-    color: #FFEA99 !important; /* Texto amarillo en hover */
-    background-color: #000000 !important; /* Fondo negro en hover */
-}
-
-.navbar-toggler { /* Botón de toggle para dispositivos móviles */
-    border-color: yellow; /* Cambia el color del borde del botón */
-}
-
-.navbar-toggler-icon { /* Icono del botón de toggle */
-    background-image: url('../static/assets/font/menu.svg');
-}
-
-.navbar-toggler:focus, .navbar-toggler:hover {
-    background-color: #000; /* Fondo negro */
-}
-
-.logo-gladiators h5 {
-    left: -1200px;
-    position: relative;
-    /* margin-right: 200px; */
-}
-.product-image {
-    max-width: 100px;
-    max-height: 100px;
-        }
-.logo-gladiators {
-    display: flex;
-    align-items: center;
-    margin-left: 2%;
-    position: relative;
-    top: 10px; 
-}
-
-.logo-gladiators img {
-    max-width: 50px;
-}
-
-.logo-gladiators h5 {
-    margin-right: 5%; /* Ajusta este valor para el espacio entre la imagen y el texto */
-}
-
-.navbar {
-    height: 0px !important; /* Forzar altura */
-    padding: 0 !important; /* Forzar padding */
-}
-
-    .navbar-expand-lg .navbar-collapse {
-        margin-left: 30%;
-    }
-
-
-
-
-
-
-
-
-
-/* Los dos contenedores principales responsivos */
-@media (max-width: 800px) {
-    .container {
-        flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
-        align-items: center; /* Centra los elementos */
-    }
-    .principal-container, .pre-visualizacion {
-        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
-    }
-    .pre-visualizacion {
-        margin-top: 20px; /* Añade un margen superior para separar los elementos */
-    }
-}
-
-@media (max-width: 768px) {
-    .pre-visualizacion {
-        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
-        max-width: 305px; /* Límite máximo de ancho para mantener el diseño */
-        margin: 0 auto; /* Centra horizontalmente en pantallas pequeñas */
-    }
-}
-
-.navbar {
-    background-color: #000000;
-    width: 1000px;
-    height: 20px;
-    justify-content: flex-end;
-    margin-left: 655px;
-    position:relative;
-}
-
-/* Fondo negro para la barra de navegación */
-.navbar { /* Elemento navbar */
-    background-color: #000000 !important; /* Forzar el fondo negro */
-    width: 610px;
-    height: 20px;
-    justify-content: flex-end; /* Mueve la barra de navegación a la derecha */
-    margin-left: 750px;
-    position: relative;
-}
-
-/* Texto amarillo para los enlaces de navegación */
-.navbar-nav .nav-item .nav-link { /* Enlaces dentro del navbar */
-    color: #FFEA99 !important; /* Texto amarillo */
-}
-
-.nav-link {
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-}
-
-.nav-link:hover {
-    color: #ff6f61; /* Cambia a un color deseado */
-    background-color: #f0f0f0; /* Cambia el fondo del enlace */
-}
-
-/* Hover: texto amarillo y fondo negro */
-.navbar-nav .nav-item .nav-link:hover {
-    color: #fcfbf9 !important; /* Texto amarillo en hover */
-    background-color: #000 !important; /* Fondo negro en hover */
-}
-
-/* Texto amarillo para la marca y otros textos dentro de la navbar */
-.navbar-brand, .navbar-toggler-icon, .navbar .h5, .logo-gladiators h5 { /* Texto dentro del navbar */
-    color: #FFEA99 !important; /* Texto amarillo */
-}
-
-/* Dropdown Menu */
-.dropdown-menu { /* Menú desplegable dentro del navbar */
-    background-color: #0b0b0b !important; /* Fondo negro */
-    border: none;
-}
-
-/* Texto amarillo en los elementos del dropdown */
-.dropdown-item { /* Elementos del menú desplegable */
-    color: #FFEA99 !important; /* Texto amarillo */
-}
-
-/* Hover en el dropdown */
-.dropdown-item:hover {
-    color: #fcfcfc !important; /* Texto amarillo en hover */
-    background-color: #000000 !important; /* Fondo negro en hover */
-}
-
-.navbar-toggler { /* Botón de toggle para dispositivos móviles */
-    border-color: yellow; /* Cambia el color del borde del botón */
-}
-
-.navbar-toggler-icon { /* Icono del botón de toggle */
-    background-image: url('../static/assets/font/menu.svg');
-}
-
-.navbar-toggler:focus, .navbar-toggler:hover {
-    background-color: #000; /* Fondo negro */
-    opacity: 0.7;
-}
-
-.logo-gladiators h5 {
-    left: -1150px;
-    position: relative;
-    top: 5px;
-    /* margin-right: 200px; */
-}
-.product-image {
-    max-width: 100px;
-    max-height: 100px;
-        }
-.logo-gladiators {
-    display: flex;
-    align-items: center;
-    margin-left: 2%;
-    position: relative;
-    top: 10px; 
-}
-
-.logo-gladiators img {
-    max-width: 50px;
-}
-
-.logo-gladiators h5 {
-    margin-right: 5%; /* Ajusta este valor para el espacio entre la imagen y el texto */
-}
-
-.navbar {
-    height: 0px !important; /* Forzar altura */
-    padding: 0 !important; /* Forzar padding */
-}
-
-    .navbar-expand-lg .navbar-collapse {
-        margin-left: 30%;
-    }
-
-
-
-
-
-
-
-
-
-/* Los dos contenedores principales responsivos */
-@media (max-width: 800px) {
-    .container {
-        flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
-        align-items: center; /* Centra los elementos */
-    }
-    .principal-container, .pre-visualizacion {
-        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
-    }
-    .pre-visualizacion {
-        margin-top: 20px; /* Añade un margen superior para separar los elementos */
-    }
-}
-
-@media (max-width: 768px) {
-    .pre-visualizacion {
-        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
-        max-width: 305px; /* Límite máximo de ancho para mantener el diseño */
-        margin: 0 auto; /* Centra horizontalmente en pantallas pequeñas */
-    }
-}
-
-.navbar {
-    background-color: #000000;
-    width: 1000px;
-    height: 20px;
-    justify-content: flex-end;
-    margin-left: 530px;
-    position:relative;
-    top: -8px;
-}
-
-/* Amarillo Pastel: #FFFFCC
-Amarillo Normal: #FFD700
-Mostaza: #D4AF37
-Amarillo Claro: #FFFF99
-Amarillo Dorado: #FFDF00
-Amarillo Mostaza: #FFDB58
-Amarillo Ocre: #CC7722
-Amarillo Ámbar: #FFBF00
-Amarillo Dorado Oscuro: #B8860B
-Amarillo Maíz: #FBEC5D */
-
-.nav-link {
-    transition: transform 0.4s ease-in-out;
-}
-
-.nav-link:hover {
-    transform: scale(1.2); /* Aumenta el tamaño del enlace */
-}
-
-/* CAMBIO DE FONDO */
-/* Estilo para el modo claro */
-body {
-    background-color: white;
-    color: black;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-/* Estilo para el modo oscuro */
+/* Dark Mode Styles */
 body.dark-mode {
-    background-color: #121212;
-    color: white;
+    background-color: #2c2c2c;
+    color: #f0f0f0;
 }
 
-/* Estilo para el botón de modo oscuro */
-.toggle-dark-mode {
-    cursor: pointer;
-    font-size: 28px;
-    position:absolute;
-    top: 94px;
-    right: 20px;
-    color: #FFEA99; /* Amarillo como en otros elementos */
+body.dark-mode .navbar {
+    background-color: #333333;
 }
 
-/* Estilo para el ícono en modo oscuro */
-body.dark-mode .toggle-dark-mode {
-    color: #FFEA99; /* Cambia el color del ícono en modo oscuro si lo deseas */
+body.dark-mode .navbar .navbar-nav .nav-link {
+    color: #fff;
 }
 
-.toggle-dark-mode i{
-    padding-right:20px;
-    margin-bottom: 0px;
-    top:20px;
+body.dark-mode .navbar .navbar-nav .nav-item.dropdown .dropdown-menu {
+    background-color: #0f0f0f;
+    border-color: #555;
 }
-/* Los dos contenedores principales responsivos */
 
-.toggle-dark-mode:hover {
-    transform: scale(1.3); /* Aumenta el tamaño del ícono */
-    color: #ffd700; /* Cambia a un tono más brillante de amarillo */
+nav {
+    display: flex;
+    align-items: center; /* Alinea verticalmente los elementos al centro */
+    justify-content: space-between; /* Espacio entre logo y secciones */
+    padding: 10px 30px;
+    background-color: var(--color-black);
+    
+}
+
+.logo-gladiators {
+    display: flex;
+    align-items: center; /* Alinea verticalmente los elementos al centro */
+}
+
+.logo-gladiators img {
+    width: 40px;
+    height: auto;
+    margin-right: 15px;
+}
+
+.secciones {
+    display: flex;
+    align-items: center; /* Alinea verticalmente los enlaces al centro */
+}
+
+.logo-gladiators{
+    color: var(--color-primary);
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.secciones a  {
+    margin-left: 20px;
+    text-decoration: none;
+    color: var(--color-primary);}
+
+
+/* Fondo negro para la barra de navegación */
+.navbar { /* Elemento navbar */
+    background-color: #000000 !important; /* Forzar el fondo negro */
+   
+}
+
+.logo-gladiators h5{
+    color: rgb(255, 255, 255) !important;
+}
+
+.navbar-toggler .navbar-toggler-icon{
+    color: #fff !important;
+    background-color: #f7df7f !important;
+}
+
+/* Estilo para el logotipo en la barra de navegación */
+.navbar-brand-img {
+    width: 50px; /* Ajusta el ancho según tus necesidades */
+    height: auto; /* Mantiene la proporción de la imagen */
+    max-height: 40px; /* Limita la altura para alinear con la barra */
+}
+
+/* Cambiar el fondo de la barra de navegación a negro */
+.navbar {
+    background-color: #000000 !important; /* Fondo negro */
+}
+
+/* Cambiar el fondo de los elementos del menú desplegable a negro */
+.navbar-nav .dropdown-menu {
+    background-color: #000000 !important; /* Fondo negro */
+}
+
+/* Cambiar el fondo de los enlaces al pasar el cursor (hover) */
+.navbar-nav .nav-link:hover {
+    background-color: #333333 !important; /* Fondo gris oscuro al pasar el cursor */
+}
+
+/* Cambiar el fondo de los elementos del dropdown al pasar el cursor */
+.navbar-nav .dropdown-menu .dropdown-item:hover {
+    background-color: #333333 !important; /* Fondo gris oscuro en los items del dropdown */
+}
+
+/* Cambiar el fondo de los enlaces activos */
+.navbar-nav .nav-link.active {
+    background-color: #333333 !important; /* Fondo gris oscuro en el enlace activo */
+}
+/* Cambiar el color del texto a blanco */
+.navbar-nav .nav-link {
+    color: #e8d43d !important; /* Letras blancas */
+}
+
+/* Cambiar el color de las letras al pasar el cursor (hover) */
+.navbar-nav .nav-link:hover {
+    color: #FFD700 !important; /* Amarillo dorado en hover */
+}
+
+/* Cambiar el color de las letras de los elementos del dropdown */
+.navbar-nav .dropdown-menu .dropdown-item {
+    color: #eaf86e !important; /* Letras blancas en los elementos del dropdown */
+}
+
+/* Cambiar el color de las letras de los elementos del dropdown al pasar el cursor */
+.navbar-nav .dropdown-menu .dropdown-item:hover {
+    color: #FFD700 !important; /* Amarillo dorado en hover */
+}
+
+/* Cambiar el color de las letras de los elementos activos */
+.navbar-nav .nav-link.active {
+    color: #FFD700 !important; /* Amarillo dorado en el enlace activo */
+}
+
+    
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .navbar-nav {
+        text-align: center;
+    }
+
+    .navbar-nav .nav-item {
+        margin: 5px 0;
+    }
 }
