--- a/templates/regProduct.html
+++ b/templates/regProduct.html
@@ -3,22 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar Producto Gladiator's</title>
-    <!-- CSS Principal y Estilos Personalizados -->
+    <title>Registrar Usuario Gladiator's</title>
     <link rel="stylesheet" href="../static/registrar.CSS">
-    <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/assets/font/flaticon.css">
-    <link rel="stylesheet" href="../static/consulta_general.css">
-    <link rel="stylesheet" href="../static/navbar.css">
-    <!-- Bootstrap y FontAwesome -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/style/assets/font/flaticon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- SweetAlert2 -->
+    <link rel="stylesheet" href="../static/style/style.css">
+    <!-- Bootstrap CSS (solo una versión) -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Modales -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
- 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/navbar.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header>
@@ -38,65 +34,68 @@
                 <p>Lun-Vie 10:00a.m--8:00p.m<br>Sab-Dom 9:00a.m--9:00p.m</p>
             </div>
         </section>
-        <nav>
-            <section class="logo-gladiators">
-                <a href="{{ url_for('index') }}">
-                    <img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's">
-                </a>
-                <h5>Gladiator's</h5>
-            </section>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('secciones') }}">Inicio</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="ventasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Ventas
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="ventasDropdown">
-                                    <a class="dropdown-item" href="{{ url_for('registrar_venta') }}">Registrar</a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="productosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Productos
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="productosDropdown">
-                                    <a class="dropdown-item" href="{{ url_for('productos') }}">Registrar</a>
-                                    <a class="dropdown-item" href="{{ url_for('consultar_productos') }}">Consultar</a>
-                                </div>
-                            </li>
-                            {% if rol is true %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="usuariosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Usuarios
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="usuariosDropdown">
-                                    <a class="dropdown-item" href="{{ url_for('registrar_usuario') }}">Registrar</a>
-                                    <a class="dropdown-item" href="{{ url_for('consultar_usuarios') }}">Consultar</a>
-                                </div>
-                            </li>
-                            {% endif %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('index') }}">Soporte</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('index') }}">Cerrar Sesión</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <section class="logo-gladiators d-flex align-items-center">
+                    <a href="{{ url_for('index') }}">
+                        <img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's" class="navbar-brand-img">
+                    </a>
+                    <h5 class="navbar-brand d-flex align-items-center">
+                        Gladiator's
+                        <i class="fas fa-lightbulb ml-2" id="toggleDarkMode"></i>
+                    </h5>
+                </section>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('secciones') }}">Inicio</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="ventasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Ventas
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="ventasDropdown">
+                            <a class="dropdown-item" href="{{ url_for('registrar_venta') }}">Registrar</a>
+                            <a class="dropdown-item" href="{{ url_for('reporte_diario') }}">Reporte Diario</a>
+                            <a class="dropdown-item" href="{{ url_for('reporte_semanal') }}">Reporte Semanal</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="productosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Productos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="productosDropdown">
+                            <a class="dropdown-item" href="{{ url_for('productos') }}">Registrar</a>
+                            <a class="dropdown-item" href="{{ url_for('consultar_productos') }}">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="usuariosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Usuarios
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="usuariosDropdown">
+                            <a class="dropdown-item" href="{{ url_for('registrar_usuario') }}">Registrar</a>
+                            <a class="dropdown-item" href="{{ url_for('consultar_usuarios') }}">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Soporte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Cerrar Sesión</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div id="toggleDarkMode" class="toggle-dark-mode">
-            <i class="fas fa-lightbulb"></i>
-        </div>
+
+        <!-- Scripts de Bootstrap (solo una versión) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </header>
     <main>
         <div class="container">
