--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/static/ventas_css/regVenta.css"> -->
-    <!-- <link rel="stylesheet" href="/static/assets/font/flaticon.css"> -->
-    <!-- <link rel="stylesheet" href="/static/style.css"> -->
+    
+    <!-- Font Awesome para íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Archivos CSS locales -->
     <link rel="stylesheet" href="../static/assets/font/flaticon.css">
     <link rel="stylesheet" href="../static/regVenta.css">
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="../static/navbar.css">
+    <link rel="stylesheet" href="../static/navbar.css">
+    
     <style>
-        /* Agregar estilos personalizados si es necesario */
+        /* Estilos personalizados */
         .textbox {
             display: flex;
             gap: 10px;
@@ -31,7 +29,6 @@
             width: 100%;
             box-sizing: border-box;
         }
-        * Modal styles */
         .modal {
             display: none;
             position: fixed;
@@ -41,7 +38,6 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgb(0,0,0);
             background-color: rgba(0,0,0,0.4);
         }
         .modal-content {
@@ -63,12 +59,11 @@
             text-decoration: none;
             cursor: pointer;
         }
-        .toggle-dark-mode i{
+        .toggle-dark-mode i {
             position: relative;
             top: -40px;
         }
     </style>
-
 </head>
 <body>
     <header>
@@ -88,24 +83,29 @@
                 <p>Lun-Vie 10:00a.m--8:00p.m<br>Sab-Dom 9:00a.m--9:00p.m</p>
             </div>
         </section>
-        <nav>
-            <section class="logo-gladiators">
-                <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's"></a>
-                <h5>Gladiator's</h5>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <section class="logo-gladiators d-flex align-items-center">
+                <a href="{{ url_for('index') }}">
+                    <img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's" class="navbar-brand-img">
+                </a>
+                <h5 class="navbar-brand d-flex align-items-center">
+                    Gladiator's
+                    <i class="fas fa-lightbulb ml-2" id="toggleDarkMode"></i>
+                </h5>
             </section>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('secciones') }}">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="ventasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Ventas
+                            Ventas
                         </a>
                         <div class="dropdown-menu" aria-labelledby="ventasDropdown">
                             <a class="dropdown-item" href="{{ url_for('registrar_venta') }}">Registrar</a>
@@ -115,39 +115,37 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="productosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Productos
+                            Productos
                         </a>
                         <div class="dropdown-menu" aria-labelledby="productosDropdown">
                             <a class="dropdown-item" href="{{ url_for('productos') }}">Registrar</a>
                             <a class="dropdown-item" href="{{ url_for('consultar_productos') }}">Consultar</a>
                         </div>
                     </li>
-                    {%  if rol is true %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="usuariosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Usuarios
+                            Usuarios
                         </a>
                         <div class="dropdown-menu" aria-labelledby="usuariosDropdown">
                             <a class="dropdown-item" href="{{ url_for('registrar_usuario') }}">Registrar</a>
                             <a class="dropdown-item" href="{{ url_for('consultar_usuarios') }}">Consultar</a>
                         </div>
                     </li>
-                    {%  endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Soporte</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Cerrar Sesión</a>
                     </li>
-                    </ul>
-                </div>
-                </div>
-            </nav>
+                </ul>
+            </div>
         </nav>
-        <div id="toggleDarkMode" class="toggle-dark-mode">
-            <i class="fas fa-lightbulb"></i>
-        </div>
     </header>
+
+    <!-- Scripts de Bootstrap y jQuery (solo una versión) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <h1>Ventas</h1>
     <main class="container">
         <div class="principal-container">
